<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            android:elevation="@dimen/dp_4">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_search_gray"
                android:drawablePadding="@dimen/dp_4"
                android:gravity="center_vertical"
                android:text="@string/search_movies_text"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/sp_16" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants">

            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/featured_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/dp_25"
                android:paddingTop="@dimen/dp_30"
                android:paddingRight="@dimen/dp_25"
                android:paddingBottom="@dimen/dp_25"
                android:text="@string/featured_movies_text"
                android:textAlignment="textStart"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/sp_25"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/featured_movies_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/featured_movies"
                android:layout_marginTop="@dimen/dp_10"
                android:clipToPadding="false"
                android:layoutAnimation="@anim/layout_animation_fall_down"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/featured_movies"
                app:spanCount="2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/top_music_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="@dimen/dp_25"
                android:paddingTop="@dimen/dp_30"
                android:paddingRight="@dimen/dp_25"
                android:paddingBottom="@dimen/dp_25"
                android:text="@string/top_music_text"
                android:textAlignment="textStart"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/sp_25"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/featured_movies_recycler" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_music_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/top_music_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>