<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorViewHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailsHolderView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants">

            <RelativeLayout
                android:id="@+id/details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/dp_30">

                <RelativeLayout
                    android:id="@+id/poster_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/dp_20">

                    <FrameLayout
                        android:id="@+id/poster_holder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <VideoView
                            android:id="@+id/itunes_poster_detail"
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:scaleType="centerCrop" />

                        <ImageView
                            android:id="@+id/itunes_poster_placeholder"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_music_note_white_24dp"
                            android:visibility="gone" />

                    </FrameLayout>


                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/itunes_track_name_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/poster_container"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:background="@drawable/selected_region_bg"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="3dp"
                    android:padding="@dimen/dp_5"
                    android:textAllCaps="true"
                    android:textColor="@color/dirty_white"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/itunes_artist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/itunes_track_name_small"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_4"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/artist_name_text"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/itunes_artist_name_small_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/itunes_artist_name"
                    android:layout_marginLeft="@dimen/dp_3"
                    android:layout_toRightOf="@+id/itunes_artist_name"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/sp_14" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/itunes_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/itunes_artist_name"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_4"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/release_date_text"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/itunes_release_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/itunes_artist_name"
                    android:layout_alignTop="@+id/itunes_release_date"
                    android:layout_marginLeft="@dimen/dp_3"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_toRightOf="@+id/itunes_release_date"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/sp_14" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/itunes_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/itunes_release_date"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_4"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/genre_text"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/itunes_genre_values"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/itunes_release_date"
                    android:layout_alignTop="@id/itunes_genres"
                    android:layout_marginLeft="@dimen/dp_3"
                    android:layout_toRightOf="@id/itunes_genres"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/sp_14" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/itunes_budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/itunes_genres"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_4"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/price_text"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/itunes_budget_values"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/itunes_genres"
                    android:layout_alignTop="@id/itunes_budget"
                    android:layout_marginLeft="@dimen/dp_3"
                    android:layout_toRightOf="@id/itunes_budget"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/sp_14" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/itunes_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/itunes_budget"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_4"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/description_text"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/itunes_description_values"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/itunes_budget"
                    android:layout_alignTop="@id/itunes_description"
                    android:layout_marginLeft="@dimen/dp_3"
                    android:layout_marginRight="@dimen/dp_3"
                    android:layout_toRightOf="@id/itunes_description"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@color/primary_text_color"
                    android:textSize="@dimen/sp_14" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>